<resources>
    <string name="app_name">VehlicleFootMark</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="lbl_login">Login</string>
    <string name="lbl_register">Register</string>
    <string name="lbl_or">OR</string>
    <string name="lbl_login_form">Login Form</string>
    <string name="lbl_register_form">Registration form</string>
    <string name="prompt_firstname">First name</string>
    <string name="prompt_lastname">Last name</string>
    <string name="action_register_short">Regtister</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="prompt_vehicle_model">Vehicle model</string>
    <string name="prompt_vehicle_number">Vehicle number</string>
    <string name="lbl_password_not_match">Passwords doesn\'t match</string>
    <string name="lbl_all_fields_manditory">All fields are manditory</string>
    <string name="lbl_trying_to_register">Trying to register</string>
    <string name="lbl_service_entry_form">Service Entry form</string>
    <string name="lbl_interim_service">Interim Service</string>
    <string name="lbl_full_service">Full Service</string>
    <string name="lbl_mojor_service">Major Service</string>
    <string name="prompt_labor_cost">Labor cost</string>
    <string name="prompt_parts_cost">Parts cost</string>
    <string name="prompt_tax">Tax</string>
    <string name="date_completed">Date Completed</string>
    <string name="prompt_next_due">Next due</string>
    <string name="prompt_serviced_by">Serviced by</string>
    <string name="prompt_comments">Comments</string>
    <string name="lbl_save">Save</string>
    <string name="lbl_home">Home</string>
    <string name="lbl_fuel_entry_form">Fuel Entry Form</string>
    <string name="lbl_ethanol">Ethanol</string>
    <string name="lbl_methanol">Methanol</string>
    <string name="lbl_gasoline">Gasoline</string>
    <string name="lbl_diesel">Diesel</string>
    <string name="lbl_biodiesel">Biodiesel</string>
    <string name="date_fuel_entered">Fuel Entered On</string>
    <string name="prompt_fuel_place">Place</string>
    <string name="prompt_total_fuel">Fuel Total</string>
    <string name="prompt_amount">Amount</string>
    <string name="date_of_problem">Date of problem</string>
    <string name="prompt_date_of_repair">Date of repair</string>
    <string name="prompt_summary">Summary</string>
    <string name="prompt_service_summary">Service summary</string>
    <string name="prompt_material_cost">Material cost</string>
    <string name="lbl_progress_bar_message">Please wait...</string>
    <string name="lbl_user_registered_successfully">User registered successfully...</string>
    <string name="lbl_is_admin">is Admin</string>
    <string name="lbl_service_entry_saved">Service entry saved successfully...</string>
    <string name="lbl_fuel_entry_saved">Fuel entry saved successfully...</string>
    <string name="title_activity_report">ReportActivity</string>
    <string name="lbl_generate">Generate Report</string>
    <string name="lbl_reports">Reports</string>
    <string name="type_of_service">Type of service</string>
    <string name="labour_cost">Labour cost</string>
    <string name="parts_cost">Parts cost</string>
    <string name="tax">Tax</string>
    <string name="completed_date">Completed Date</string>
    <string name="next_due_date">Next Due Date</string>
    <string name="serviced_by">Serviced By</string>
    <string name="comments">Comments</string>
    <string name="lbl_repair_entry_form">Repair Entry form</string>
    <string name="serial_no">S.No.</string>
    <string name="repair_found_date">Repair Found Date</string>
    <string name="date_of_repair">Date Of Repair</string>
    <string name="problem_summary">Problem Summary</string>
    <string name="repair_summary">Repair Summary</string>
    <string name="date">Date</string>
    <string name="fuel_type">Fuel Type</string>
    <string name="prompt_date_to">Date To</string>
    <string name="date_from">Date From</string>

</resources>
