<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.vehliclefootmark.reports.ReportActivity">

    <include layout="@layout/header" />

    <LinearLayout
        android:id="@+id/lin_reports"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <Spinner
            android:id="@+id/spinner_report_users"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Spinner
            android:id="@+id/spinner_report_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_margin"
            android:layout_weight="1" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_margin">

            <EditText
                android:id="@+id/et_date_report_from"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/date_from"
                android:inputType="textNoSuggestions|date"
                android:maxLines="1"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_date_report_to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/prompt_date_to"
                android:inputType="textNoSuggestions|date"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_generate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_generate" />

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="vertical">

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TableLayout
                        android:id="@+id/table_service"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone">

                        <TableRow android:background="@color/table_header">

                            <TextView
                                android:layout_margin="@dimen/table_text_margin"
                                android:background="@drawable/cell_header_background"
                                android:padding="@dimen/table_text_padding"
                                android:text="@string/serial_no"
                                android:textColor="@android:color/white"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_margin="@dimen/table_text_margin"
                                android:background="@drawable/cell_header_background"
                                android:padding="@dimen/table_text_padding"
                                android:text="@string/type_of_service"
                                android:textColor="@android:color/white"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_margin="@dimen/table_text_margin"
                                android:background="@drawable/cell_header_background"
                                android:padding="@dimen/table_text_padding"
                                android:text="@string/labour_cost"
                                android:textColor="@android:color/white"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_margin="@dimen/table_text_margin"
                                android:background="@drawable/cell_header_background"
                                android:padding="@dimen/table_text_padding"
                                android:text="@string/parts_cost"
                                android:textColor="@android:color/white"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_margin="@dimen/table_text_margin"
                                android:background="@drawable/cell_header_background"
                                android:padding="@dimen/table_text_padding"
                                android:text="@string/tax"
                                android:textColor="@android:color/white"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_margin="@dimen/table_text_margin"
                                android:background="@drawable/cell_header_background"
                                android:padding="@dimen/table_text_padding"
                                android:text="@string/completed_date"
                                android:textColor="@android:color/white"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_margin="@dimen/table_text_margin"
                                android:background="@drawable/cell_header_background"
                                android:padding="@dimen/table_text_padding"
                                android:text="@string/next_due_date"
                                android:textColor="@android:color/white"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_margin="@dimen/table_text_margin"
                                android:background="@drawable/cell_header_background"
                                android:padding="@dimen/table_text_padding"
                                android:text="@string/serviced_by"
                                android:textColor="@android:color/white"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_margin="@dimen/table_text_margin"
                                android:background="@drawable/cell_header_background"
                                android:padding="@dimen/table_text_padding"
                                android:text="@string/comments"
                                android:textColor="@android:color/white"
                                android:textStyle="bold" />
                        </TableRow>

                    </TableLayout>

                    <TableLayout
                        android:id="@+id/table_repair"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone">

                        <TableRow android:background="@color/table_header">

                            <TextView
                                android:layout_margin="@dimen/table_text_margin"
                                android:background="@drawable/cell_header_background"
                                android:padding="@dimen/table_text_padding"
                                android:text="@string/serial_no"
                                android:textColor="@android:color/white"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_margin="@dimen/table_text_margin"
                                android:background="@drawable/cell_header_background"
                                android:padding="@dimen/table_text_padding"
                                android:text="@string/repair_found_date"
                                android:textColor="@android:color/white"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_margin="@dimen/table_text_margin"
                                android:background="@drawable/cell_header_background"
                                android:padding="@dimen/table_text_padding"
                                android:text="@string/date_of_repair"
                                android:textColor="@android:color/white"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_margin="@dimen/table_text_margin"
                                android:background="@drawable/cell_header_background"
                                android:padding="@dimen/table_text_padding"
                                android:text="@string/problem_summary"
                                android:textColor="@android:color/white"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_margin="@dimen/table_text_margin"
                                android:background="@drawable/cell_header_background"
                                android:padding="@dimen/table_text_padding"
                                android:text="@string/repair_summary"
                                android:textColor="@android:color/white"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_margin="@dimen/table_text_margin"
                                android:background="@drawable/cell_header_background"
                                android:padding="@dimen/table_text_padding"
                                android:text="@string/prompt_material_cost"
                                android:textColor="@android:color/white"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_margin="@dimen/table_text_margin"
                                android:background="@drawable/cell_header_background"
                                android:padding="@dimen/table_text_padding"
                                android:text="@string/labour_cost"
                                android:textColor="@android:color/white"
                                android:textStyle="bold" />

                        </TableRow>

                    </TableLayout>

                    <TableLayout
                        android:id="@+id/table_fuel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone">

                        <TableRow android:background="@color/table_header">

                            <TextView
                                android:layout_margin="@dimen/table_text_margin"
                                android:background="@drawable/cell_header_background"
                                android:padding="@dimen/table_text_padding"
                                android:text="@string/serial_no"
                                android:textColor="@android:color/white"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_margin="@dimen/table_text_margin"
                                android:background="@drawable/cell_header_background"
                                android:padding="@dimen/table_text_padding"
                                android:text="@string/date"
                                android:textColor="@android:color/white"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_margin="@dimen/table_text_margin"
                                android:background="@drawable/cell_header_background"
                                android:padding="@dimen/table_text_padding"
                                android:text="@string/fuel_type"
                                android:textColor="@android:color/white"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_margin="@dimen/table_text_margin"
                                android:background="@drawable/cell_header_background"
                                android:padding="@dimen/table_text_padding"
                                android:text="@string/prompt_fuel_place"
                                android:textColor="@android:color/white"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_margin="@dimen/table_text_margin"
                                android:background="@drawable/cell_header_background"
                                android:padding="@dimen/table_text_padding"
                                android:text="@string/prompt_total_fuel"
                                android:textColor="@android:color/white"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_margin="@dimen/table_text_margin"
                                android:background="@drawable/cell_header_background"
                                android:padding="@dimen/table_text_padding"
                                android:text="@string/prompt_amount"
                                android:textColor="@android:color/white"
                                android:textStyle="bold" />

                        </TableRow>

                    </TableLayout>
                </RelativeLayout>
            </HorizontalScrollView>
        </ScrollView>
    </LinearLayout>

</LinearLayout>
